--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
           </div>
           <!-- done end -->
         </div>
-      </div>
-        <!-- creating a div to setup like trash option on the bottom of the page -->
-        <div class="mt-auto" id="trash">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
-            Drop Here to Remove.
+          <!-- creating a div to setup like trash option on the bottom of the page -->
+          <div class="mt-auto" id="trash">
+            <div class="w-100 bg-danger p-3 text-center text-light display-4">
+              Drop Here to Remove.
+            </div>
           </div>
-        </div>
+      </div>
     </main>
   </div>
 
@@ -118,6 +118,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="./assets/js/script.js"></script>
